# pandemic_model_public

./: .gitignore  .gitmodules  .renvignore  CLAUDE.md  README.md  advance_prep_benefits.m  advance_prep_costs.m  calc_adv_capacity_costs.m  calc_avail_capacity.m  calculate_cap.m  capital_costs.m  clean_inputs.sh  f.m  f_cum.m  f_cum0.m  figure_style_spec.md  finish_gen_sim_scens.m  gen_all_sim_scens.m  gen_intensity_matrix.m  gen_sim_scens.m  gen_sim_scens_new.m  generate_outputs.sh  get_adv_capacity.m  get_capacity.m  get_initial_adv_capacity_costs.m  get_target_capacity.m  h_integral.m  main.m  main_CEPI.m  main_CEPI_202402.m  main_CEPI_levels.m  main_CEPI_summary.m  main_summary.m  main_thresholds.m  map_RD_score_to_pathogen_family.m  monte_carlo_sims.m  monte_carlo_sims_graphs.m  monte_carlo_sims_new.m  params_default.m  production_capacity.m  (+9 more)
python/: README.md  pyproject.toml
python/notebooks/: 01_novel_symptom_arrival.ipynb  02_hyperbolic_parametrization.ipynb  03_resp_viral_comp.ipynb  04_hyperbolic_resp_viral.ipynb  05_marani_inspired_model.ipynb  06a_sensitivity_data_1600.ipynb  06b_sensitivity_data_1900.ipynb  06c_sensitivity_data_outlier.ipynb  06d_sensitivity_hyperbolic_thresh.ipynb  06e_sensitivity_gpd_thresh.ipynb  07_resp_viral_duration.ipynb  08_coronavirus_exceedance.ipynb  09_viral_family_explore.ipynb  10_family_duration.ipynb  11_simple_model.ipynb  12_internal_presentation_figures.ipynb  13 test_truncated_pareto.ipynb  14 check_surveillance_function.ipynb  15 check_poisson_scale_invariance.ipynb  16 check_pareto_fitting.ipynb  17 test_mcf.ipynb  18 non_sim_expectations.ipynb  (+27 more)
(+1137 files in other folders)
