[tool.poetry]
name = "pandemic-model"
version = "0.1.0"
description = ""
authors = ["sq46 <squaade@uchicago.edu>"]
readme = "README.md"
packages = [{include = "pandemic_model"}]

[tool.poetry.dependencies]
python = "3.11.9"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pyyaml = "^6.0.2"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
statsmodels = "^0.14.4"
ipywidgets = "^8.1.5"
tabulate = "^0.9.0"
plotly = "^6.0.0"
nbformat = "^5.10.4"
tqdm = "^4.67.1"
numba = "^0.61.2"
numdifftools = "^0.9.41"
click = "^8.2.1"
pandemic-statistics = {git = "https://github.com/ganqili/pandemic-statistics.git", rev = "prep-for-integration"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]